chore: try with redirect

--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -22,34 +22,30 @@
   "rewrites": [
     {
       "source": "/",
-      "destination": "https://storefront.azzapp.com/",
-      "permanent": true
+      "destination": "https://storefront.azzapp.com/"
     },
     {
       "source": "/plus/:match*",
-      "destination": "https://storefront.azzapp.com/plus/:match*",
-      "permanent": true
+      "destination": "https://storefront.azzapp.com/plus/:match*"
     },
     {
       "source": "/personal/:match*",
-      "destination": "https://storefront.azzapp.com/personal/:match*",
-      "permanent": true
+      "destination": "https://storefront.azzapp.com/personal/:match*"
     },
     {
       "source": "/pricing",
-      "destination": "https://storefront.azzapp.com/pricing",
-      "permanent": true
+      "destination": "https://storefront.azzapp.com/pricing"
     },
     {
       "source": "/company/:match*",
-      "destination": "https://storefront.azzapp.com/company/:match*",
-      "permanent": true
+      "destination": "https://storefront.azzapp.com/company/:match*"
     },
     {
       "source": "/legal/:match*",
-      "destination": "https://storefront.azzapp.com/legal/:match*",
-      "permanent": true
-    },
+      "destination": "https://storefront.azzapp.com/legal/:match*"
+    }
+  ],
+  "redirects": [
     {
       "source": "/_framer/:match*",
       "destination": "https://storefront.azzapp.com/_framer/:match*",
