3872 bug 20240624 2 in cover editiontemplates the template tab does not scroll down correctly (#3911)

--- a/packages/app/ios/azzapp-devRelease.entitlements
+++ b/packages/app/ios/azzapp-devRelease.entitlements
@@ -4,8 +4,8 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>webcredentials:azzapp-dev.vercel.app</string>
-		<string>applinks:azzapp-dev.vercel.app</string>
+		<string>webcredentials:dev.azzapp.com</string>
+		<string>applinks:dev.azzapp.com</string>
 	</array>
 </dict>
 </plist>
