--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -82,6 +82,7 @@
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "expo": "^51.0.14",
+    "expo-asset": "^10.0.9",
     "expo-av": "^14.0.5",
     "expo-blur": "^13.0.2",
     "expo-clipboard": "~6.0.3",
@@ -122,7 +123,7 @@
     "react-native-quick-base64": "^2.1.2",
     "react-native-reanimated": "^3.13.0-rc.1",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "^3.32.0",
     "react-native-share": "^10.2.1",
     "react-native-skottie-template-player": "workspace:^",
     "react-native-svg": "^15.3.0",
