--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -1,6 +1,8 @@
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 #require for mono repo
 # Resolve react_native_pods.rb with node to allow for hoisting
+# enable Video caching
+$RNVideoUseVideoCaching=true
 def node_require(script)
   # Resolve script with node to allow for hoisting
   require Pod::Executable.execute_command('node', ['-p',
@@ -45,6 +47,10 @@ abstract_target 'common' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  ##recat native video auto cache (for play external only, our actual cache is not working on android)
+  pod 'SPTPersistentCache', :modular_headers => true
+  pod 'DVAssetLoaderDelegate', :modular_headers => true
 
   target 'azzappTests' do
     inherit! :complete
