--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -129,6 +129,7 @@
     "react-native-svg": "^15.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
+    "react-native-video": "^6.3.0",
     "react-native-vision-camera": "^4.3.2",
     "react-relay": "^17.0.0",
     "use-debounce": "^10.0.1",
