Add ABOUT and FAQ links (#3985)
Co-authored-by: Mickael Lecoq <mickael@lecoq.me>

--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -12,3 +12,5 @@ PURCHASE_IOS_KEY=appl_lWmNaDeIzQcECQzHakHNyLaktch
 # LINKS FOR LEGAL PAGES
 TERMS_OF_SERVICE=https://www.azzapp.com/legal/terms-of-service
 PRIVACY_POLICY=https://www.azzapp.com/legal/privacy
+ABOUT=https://www.azzapp.com/company/about_us
+FAQ=https://www.azzapp.com/company/faq
