--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -145,6 +145,7 @@
     "@types/relay-test-utils": "^14.1.4",
     "jest": "^29.7.0",
     "jest-expo": "^51.0.2",
+    "prettier-2": "npm:prettier@^2",
     "react-native-dotenv": "^3.4.11",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.3.1",
