--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -67,33 +67,34 @@
     "@formatjs/intl-locale": "^3.4.6",
     "@formatjs/intl-pluralrules": "^5.2.14",
     "@formatjs/intl-relativetimeformat": "^11.2.14",
-    "@hookform/resolvers": "^3.6.0",
+    "@hookform/resolvers": "^3.7.0",
     "@lottiefiles/lottie-js": "0.4.2",
     "@miblanchard/react-native-slider": "2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.8.1",
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native/metro-config": "^0.74.84",
+    "@react-native/metro-config": "^0.74.85",
     "@reeq/react-native-passkit": "^0.1.3",
     "@sentry/react-native": "^5.24.1",
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-skia": "^1.3.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^51.0.14",
-    "expo-asset": "^10.0.9",
+    "expo": "^51.0.17",
+    "expo-asset": "^10.0.10",
     "expo-av": "^14.0.6",
     "expo-blur": "^13.0.2",
     "expo-clipboard": "~6.0.3",
     "expo-contacts": "~13.0.3",
+    "expo-device": "^6.0.2",
     "expo-font": "^12.0.7",
     "expo-haptics": "~13.0.1",
     "expo-image": "^1.12.12",
     "expo-linear-gradient": "~13.0.2",
-    "expo-sensors": "13.0.8",
+    "expo-sensors": "^13.0.9",
     "expo-status-bar": "^1.12.1",
-    "graphql": "^16.8.2",
+    "graphql": "^16.9.0",
     "graphql-relay": "^0.10.1",
     "i18n-iso-countries": "^7.11.2",
     "libphonenumber-js": "^1.11.2",
@@ -101,14 +102,14 @@
     "lottie-react-native": "^6.7.2",
     "lz-string": "^1.5.0",
     "react": "^18.3.1",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.52.1",
     "react-intl": "^6.6.8",
-    "react-native": "^0.74.2",
+    "react-native": "^0.74.3",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.9",
     "react-native-bootsplash": "^5.5.3",
     "react-native-confirmation-code-field": "^7.4.0",
-    "react-native-email-link": "^1.16.0",
+    "react-native-email-link": "^1.16.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-haptic-feedback": "^2.2.0",
@@ -122,7 +123,7 @@
     "react-native-purchases": "^7.27.4",
     "react-native-quick-base64": "^2.1.2",
     "react-native-reanimated": "^3.13.0-rc.1",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
     "react-native-share": "^10.2.1",
     "react-native-skottie-template-player": "workspace:^",
@@ -136,7 +137,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@react-native/babel-preset": "^0.74.84",
+    "@react-native/babel-preset": "^0.74.85",
     "@testing-library/react-native": "^12.5.1",
     "@types/chroma-js": "^2.4.4",
     "@types/react": "^18.3.3",
@@ -144,7 +145,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "@types/relay-test-utils": "^14.1.4",
     "jest": "^29.7.0",
-    "jest-expo": "^51.0.2",
+    "jest-expo": "^51.0.3",
     "prettier-2": "npm:prettier@^2",
     "react-native-dotenv": "^3.4.11",
     "react-native-monorepo-tools": "^1.2.1",
