--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -81,7 +81,7 @@
     "@shopify/react-native-skia": "^1.3.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^51.0.17",
+    "expo": "^51.0.18",
     "expo-asset": "^10.0.10",
     "expo-av": "^14.0.6",
     "expo-blur": "^13.0.2",
@@ -120,9 +120,9 @@
     "react-native-mmkv": "^2.12.2",
     "react-native-pager-view": "^6.3.3",
     "react-native-permissions": "^4.1.5",
-    "react-native-purchases": "^7.27.4",
+    "react-native-purchases": "^7.28.0",
     "react-native-quick-base64": "^2.1.2",
-    "react-native-reanimated": "^3.13.0-rc.1",
+    "react-native-reanimated": "^3.13.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
     "react-native-share": "^10.2.1",
@@ -131,7 +131,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-video": "^6.3.0",
-    "react-native-vision-camera": "^4.3.2",
+    "react-native-vision-camera": "^4.4.1",
     "react-relay": "^17.0.0",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
