--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -67,7 +67,7 @@
     "@formatjs/intl-locale": "^3.4.6",
     "@formatjs/intl-pluralrules": "^5.2.14",
     "@formatjs/intl-relativetimeformat": "^11.2.14",
-    "@hookform/resolvers": "^3.7.0",
+    "@hookform/resolvers": "^3.9.0",
     "@lottiefiles/lottie-js": "0.4.2",
     "@miblanchard/react-native-slider": "2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
@@ -77,8 +77,8 @@
     "@react-native/metro-config": "^0.74.85",
     "@reeq/react-native-passkit": "^0.1.3",
     "@sentry/react-native": "^5.24.1",
-    "@shopify/flash-list": "1.6.4",
-    "@shopify/react-native-skia": "^1.3.3",
+    "@shopify/flash-list": "^1.7.0",
+    "@shopify/react-native-skia": "^1.3.8",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "expo": "^51.0.18",
@@ -114,7 +114,7 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-size": "^1.1.6",
-    "react-native-keyboard-controller": "^1.12.4",
+    "react-native-keyboard-controller": "^1.12.5",
     "react-native-localize": "^3.2.0",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^2.12.2",
@@ -151,7 +151,7 @@
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.3.1",
     "relay-test-utils": "^17.0.0",
-    "rimraf": "^5.0.7",
-    "typescript": "^5.5.2"
+    "rimraf": "^5.0.8",
+    "typescript": "^5.5.3"
   }
 }
