build: try to update android resourceClass

--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -17,7 +17,7 @@
       },
       "android": {
         "image": "latest",
-        "resourceClass": "medium"
+        "resourceClass": "large"
       }
     },
     "development": {
