--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "drizzle-kit@^0.22.7": "patch:drizzle-kit@npm%3A0.22.7#./.yarn/patches/drizzle-kit-npm-0.22.7-19553a88f0.patch",
     "drizzle-orm@^0.31.2": "patch:drizzle-orm@npm%3A0.31.2#./.yarn/patches/drizzle-orm-npm-0.31.2-f0b4701b98.patch",
     "react-native-screens@^3.32.0": "patch:react-native-screens@npm%3A3.32.0#./.yarn/patches/react-native-screens-npm-3.32.0-a22eba53a2.patch",
-    "@shopify/react-native-skia@1.3.8": "patch:@shopify/react-native-skia@npm%3A1.3.8#./.yarn/patches/@shopify-react-native-skia-npm-1.3.8-0ad031190d.patch"
+    "@shopify/react-native-skia@1.3.8": "patch:@shopify/react-native-skia@npm%3A1.3.8#./.yarn/patches/@shopify-react-native-skia-npm-1.3.8-0ad031190d.patch",
+    "react-native-video@^6.4.1": "patch:react-native-video@npm%3A6.4.1#./.yarn/patches/react-native-video-npm-6.4.1-bfaf0424e7.patch"
   },
   "dependencies": {
     "node-gyp": "^10.1.0"
