fix: proper currency formating (#4266)
* feat: add config for staging

* fix: proper currency formating

---------

Co-authored-by: Mickael Lecoq <mickael@lecoq.me>

--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -13,3 +13,5 @@ CONTACT_CARD_SIGNATURE_SECRET="secret"
 NEXT_PUBLIC_DOWNLOAD_MOBILE_APP=http://www.azzapp.com
 USERNAME_CHANGE_FREQUENCY_DAY=30
 USERNAME_REDIRECTION_AVAILABILITY_DAY=30
+#revenue cat notif server bearer token (this is the dev value)
+IAP_REVENUECAT_NOTIFICATION_BEARER=DkAgYzjiRxns4ty
