feat: initial EAS Update config (#4302)
* feat: eas update initial setup

* fix: use recommeande app.json

* feat: force push update

--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -9,5 +9,17 @@
   },
   "ios": {
     "bundleIdentifier": "com.azzapp.app"
+  },
+  "expo": {
+    "runtimeVersion": "1.0.0",
+    "updates": {
+      "url": "https://u.expo.dev/6f4f8646-b45c-4cc0-85ae-a5aa04a7bebb",
+      "enabled": true,
+      "checkAutomatically": "ALWAYS"
+    },
+    "android": {},
+    "ios": {
+      "bundleIdentifier": "com.azzapp.app"
+    }
   }
 }
