--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -18,7 +18,8 @@
       "android": {
         "image": "latest",
         "resourceClass": "large"
-      }
+      },
+      "channel": "base"
     },
     "development": {
       "extends": "base",
@@ -38,7 +39,8 @@
         "PURCHASE_ANDROID_KEY": "goog_vyxAfpVyZNmOdHVuuIQOBmjHevs",
         "PURCHASE_IOS_KEY": "appl_lWmNaDeIzQcECQzHakHNyLaktch",
         "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp-dev"
-      }
+      },
+      "channel": "development"
     },
     "staging": {
       "extends": "base",
@@ -57,7 +59,8 @@
         "PURCHASE_IOS_KEY": "appl_XWlrdgSwpfsScIXTNWeFxtyCqzz",
         "PURCHASE_ANDROID_KEY": "goog_oeNrOyuTiDWViuGRRPpDIGlVKMR",
         "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp-dev"
-      }
+      },
+      "channel": "staging"
     },
     "production": {
       "extends": "base",
@@ -73,7 +76,8 @@
         "NEXT_PUBLIC_API_ENDPOINT": "https://www.azzapp.com/api",
         "DEPLOYMENT_ENVIRONMENT": "production",
         "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp"
-      }
+      },
+      "channel": "production"
     }
   },
   "submit": {
