add smart banner in website (#4264)
* add smart banner in website

* fix lint error

* adress PR feedback

---------

Co-authored-by: Mickael Lecoq <mickael@lecoq.me>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
     "packages/schema/lib",
     "packages/payment/lib",
     "packages/web/.next",
+    "packages/web/public/smartbanner.*",
     "trash"
   ],
   "rules": {
