--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -2,6 +2,7 @@
   "name": "azzapp",
   "owner": "azzapp",
   "slug": "azzapp",
+  "runtimeVersion": "1.0.0",
   "extra": {
     "eas": {
       "projectId": "6f4f8646-b45c-4cc0-85ae-a5aa04a7bebb"
