build: review expo config to avoid crash on expo-updates on android (#4310)

--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -13,6 +13,7 @@
   },
   "updates": {
     "url": "https://u.expo.dev/6f4f8646-b45c-4cc0-85ae-a5aa04a7bebb",
-    "enabled": true
+    "enabled": true,
+    "checkAutomatically": "ON_LOAD"
   }
 }
