--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -39,6 +39,11 @@ abstract_target 'common' do
     rescue => e
       Pod::UI.warn e
     end
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
   end
   config = use_native_modules!
 
