--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -24,7 +24,7 @@
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
-    "@lokalise/node-api": "^12.5.0",
+    "@formatjs/icu-messageformat-parser": "^2.7.8",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/x-data-grid": "latest",
@@ -38,6 +38,7 @@
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-virtuoso": "^4.7.12",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
