--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,12 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": { "noEmit": true },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json"],
-  "exclude": ["node_modules", "packages/**/*.*"]
+  "exclude": ["node_modules", "packages/**/*.*"],
+  "ts-node": {
+    // these options are overrides used only by ts-node
+    // same as the --compilerOptions flag and the TS_NODE_COMPILER_OPTIONS environment variable
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  }
 }
