fix: revenue stating identifier (#4370)
Co-authored-by: Mickael Lecoq <mickael@lecoq.me>

--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -56,8 +56,8 @@
         "NEXT_PUBLIC_URL": "https://staging.azzapp.com/",
         "NEXT_PUBLIC_API_ENDPOINT": "https://staging.azzapp.com/api",
         "DEPLOYMENT_ENVIRONMENT": "staging",
-        "PURCHASE_IOS_KEY": "appl_XWlrdgSwpfsScIXTNWeFxtyCqzz",
-        "PURCHASE_ANDROID_KEY": "goog_oeNrOyuTiDWViuGRRPpDIGlVKMR",
+        "PURCHASE_IOS_KEY": "appl_snKjYqjvdiQjvatKGCOHyHUwXMO",
+        "PURCHASE_ANDROID_KEY": "TODO",
         "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp-dev"
       },
       "channel": "staging"
@@ -75,7 +75,9 @@
         "NEXT_PUBLIC_URL": "https://www.azzapp.com/",
         "NEXT_PUBLIC_API_ENDPOINT": "https://www.azzapp.com/api",
         "DEPLOYMENT_ENVIRONMENT": "production",
-        "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp"
+        "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME": "azzapp",
+        "PURCHASE_IOS_KEY": "appl_XWlrdgSwpfsScIXTNWeFxtyCqzz",
+        "PURCHASE_ANDROID_KEY": "TODO"
       },
       "channel": "production"
     }
