chore: configure regions for serverless functions

--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -19,6 +19,7 @@
       "schedule": "*/1 * * * *"
     }
   ],
+  "regions": ["fra1", "iad1", "pdx1", "gru1", "sin1"],
   "rewrites": [
     {
       "source": "/",
