--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -3,6 +3,7 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=azzapp
 NEXT_PUBLIC_API_ENDPOINT=https://azzapp-staging.vercel.app/api
 NEXT_PUBLIC_URL=https://azzapp-staging.vercel.app/
 APP_SCHEME='azzapp://'
+APP_WEBSHARED_CREDENTIALS='dev.azzapp.com'
 USE_OFFLINE_CACHE=
 
 # PURCHASE (those value should work for the dev testing version)
