--- a/packages/app/ios/azzapp-devDebug.entitlements
+++ b/packages/app/ios/azzapp-devDebug.entitlements
@@ -4,6 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
+		<string>webcredentials:dev.azzapp.com</string>
 		<string>applinks:localhost:3000?mode=developer</string>
 	</array>
 </dict>
