--- a/packages/app/ios/azzapp-devRelease.entitlements
+++ b/packages/app/ios/azzapp-devRelease.entitlements
@@ -4,6 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
+		<string>webcredentials:dev.azzapp.com</string>
 		<string>applinks:dev.azzapp.com</string>
 	</array>
 </dict>
