--- a/packages/app/ios/azzapp/azzappRelease.entitlements
+++ b/packages/app/ios/azzapp/azzappRelease.entitlements
@@ -4,6 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
+		<string>webcredentials:azzapp.com</string>
 		<string>applinks:azzapp.com</string>
 	</array>
 </dict>
