--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -113,6 +113,7 @@
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-size": "^1.1.6",
     "react-native-keyboard-controller": "^1.12.6",
+    "react-native-keychain": "^8.2.0",
     "react-native-localize": "^3.2.0",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^2.12.2",
