--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -46,6 +46,7 @@
     "graphql-shield": "^7.6.5",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
+    "pexels": "^1.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
