fix: update permissions

--- a/packages/app/ios/azzapp/Info.plist
+++ b/packages/app/ios/azzapp/Info.plist
@@ -30,7 +30,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true />
 	<key>NSAppTransportSecurity</key>
@@ -41,17 +41,15 @@
 		<true />
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your Camera.</string>
+	<string>$(PRODUCT_NAME) needs access to your camera to capture photos and videos for sharing within the app.</string>
 	<key>NSContactsUsageDescription</key>
-	<string>Allow $(PRODUCT_NAME) to access to your contacts to add or update shared via $(PRODUCT_NAME).</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string />
+	<string>Allow $(PRODUCT_NAME) to access your contacts to easily invite friends to join a multi-user WebCard.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your Microphone.</string>
+	<string>$(PRODUCT_NAME) needs access to your microphone to record audio for video content within the app.</string>
 	<key>NSMotionUsageDescription</key>
-	<string>Detect if your phone is in portrait or landscape to display your contact card</string>
+	<string>$(PRODUCT_NAME) uses motion detection to optimize the display of your contact card based on your device’s orientation.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires access to the photo library.</string>
+	<string>$(PRODUCT_NAME) requires access to your photo library to upload and share photos within the app.</string>
 	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
 	<true />
 	<key>UIAppFonts</key>
