--- a/packages/app/ios/azzapp/azzappRelease.entitlements
+++ b/packages/app/ios/azzapp/azzappRelease.entitlements
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>webcredentials:azzapp.com</string>
-		<string>applinks:azzapp.com</string>
-	</array>
-</dict>
+	<dict>
+		<key>com.apple.developer.associated-domains</key>
+		<array>
+			<string>webcredentials:azzapp.com</string>
+			<string>webcredentials:www.azzapp.com</string>
+			<string>applinks:azzapp.com</string>
+			<string>applinks:www.azzapp.com</string>
+		</array>
+	</dict>
 </plist>
