--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -156,64 +156,6 @@ jobs:
     
       ############################################
       #
-      # IOS Application build
-      #
-      ############################################
-      - uses: ruby/setup-ruby@v1
-        with:
-          working-directory: packages/app
-          bundler-cache: true
-
-      - name: Cache CocoaPods
-        uses: actions/cache@v3
-        with:
-          path: packages/app/ios/Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('packages/app/ios/Podfile.lock') }}
-
-
-      - name: Pod install
-        working-directory: packages/app/ios
-        run: bundle exec pod install
-
-      - name: Setup Xcode env
-        run: |
-          echo "Setup node for xcode to $(command -v node)"
-          echo "export NODE_BINARY=$(command -v node)" > ./packages/app/ios/.xcode.env
-          echo "export NODE_BINARY=$(command -v node)" > ./packages/app/ios/.xcode.env.local
-
-      - name: Build ios application
-        working-directory: packages/app
-        run: yarn build:ios
-        env:
-          NEXT_PUBLIC_URL: https://staging.azzapp.com/
-          NEXT_PUBLIC_API_ENDPOINT: https://staging.azzapp.com/api
-          DEPLOYMENT_ENVIRONMENT: staging
-          PURCHASE_IOS_KEY: appl_snKjYqjvdiQjvatKGCOHyHUwXMO
-          PURCHASE_ANDROID_KEY: TODO
-          NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: azzapp-dev
-          APP_WEBSHARED_CREDENTIALS: staging.azzapp.com
-          IOS_APP_IDENTIFIER: com.azzapp.app-staging
-          IOS_CERTIFICATE_P12_PASSWORD: "Mgi4NvRLYMe6hU2eV093"
-          IOS_SCHEME: "azzapp-staging"
-          IOS_PROFILE_ID: "21ce0fd8-1935-459a-9d72-69714e831b25"
-          IOS_CODE_SIGNING_IDENTITY: "iPhone Distribution: APPCORP (66D3U3GLN6)"
-          IOS_TEAM_ID: "66D3U3GLN6"
-          EXPORT_METHOD: "ad-hoc"
-
-      - name: Upload ios artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: azzapp-staging.ipa
-          path: packages/app/fastlane/builds/azzapp-staging.ipa
-      
-      - name: Upload ios dSYM
-        uses: actions/upload-artifact@v4
-        with:
-          name: azzapp-staging.app.dSYM.zip
-          path: packages/app/fastlane/builds/azzapp-staging.app.dSYM.zip 
-
-      ############################################
-      #
       # PlanetScale schema migration
       #
       ############################################
@@ -364,8 +306,80 @@ jobs:
           rm -fr ./packages/web/.next
           vercel deploy --token=${{ secrets.VERCEL_TOKEN }} --meta githubCommitRef=${{ github.ref_name }} $ADDITIONAL_ARGS
 
+      ############################################
+      #
+      # IOS Application build
+      #
+      ############################################
+      - uses: ruby/setup-ruby@v1
+        with:
+          working-directory: packages/app
+          bundler-cache: true
 
-        
+      - name: Cache CocoaPods
+        uses: actions/cache@v3
+        with:
+          path: packages/app/ios/Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('packages/app/ios/Podfile.lock') }}
+
+
+      - name: Pod install
+        working-directory: packages/app/ios
+        run: bundle exec pod install
+
+      - name: Setup Xcode env
+        run: |
+          echo "Setup node for xcode to $(command -v node)"
+          echo "export NODE_BINARY=$(command -v node)" > ./packages/app/ios/.xcode.env
+          echo "export NODE_BINARY=$(command -v node)" > ./packages/app/ios/.xcode.env.local
+
+      - name: Build ios application
+        working-directory: packages/app
+        run: yarn build:ios
+        env:
+          NEXT_PUBLIC_URL: ${{ vars.NEXT_PUBLIC_URL }}
+          NEXT_PUBLIC_API_ENDPOINT: ${{ vars.NEXT_PUBLIC_API_ENDPOINT }}
+          DEPLOYMENT_ENVIRONMENT: ${{ vars.NEXT_PUBLIC_PLATFORM }}
+          PURCHASE_IOS_KEY: ${{ vars.PURCHASE_IOS_KEY }}
+          PURCHASE_ANDROID_KEY: ${{ vars.PURCHASE_ANDROID_KEY }}
+          APP_WEBSHARED_CREDENTIALS: ${{ vars.APP_WEBSHARED_CREDENTIALS }}
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          TERMS_OF_SERVICE: https://www.azzapp.com/legal/terms-of-service
+          PRIVACY_POLICY: https://www.azzapp.com/legal/privacy
+          ABOUT: https://www.azzapp.com/company/about_us
+          FAQ: https://www.azzapp.com/company/faq
+          IOS_APP_IDENTIFIER: ${{ vars.IOS_APP_IDENTIFIER }}
+          IOS_SCHEME: ${{ vars.IOS_SCHEME }}
+          IOS_PROFILE_ID: ${{ vars.IOS_PROFILE_ID }}
+          IOS_CODE_SIGNING_IDENTITY: ${{ vars.CODE_SIGNING_IDENTITY }}
+          IOS_EXPORT_METHOD: ${{ vars.IOS_EXPORT_METHOD }}
+          IOS_CERTIFICATE_P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_P12_PASSWORD }}
+          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
+
+      - name: Upload ios artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ vars.IOS_SCHEME }}.ipa
+          path: packages/app/fastlane/builds/${{ vars.IOS_SCHEME }}.ipa
+      
+      - name: Upload ios dSYM
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ vars.IOS_SCHEME }}.app.dSYM.zip
+          path: packages/app/fastlane/builds/${{ vars.IOS_SCHEME }}.app.dSYM.zip 
+      
+      - name: Build ios application
+        working-directory: packages/app
+        run: bundle exec fastlane deploy
+        env:
+          IOS_APP_IDENTIFIER: ${{ vars.IOS_APP_IDENTIFIER }}
+          IOS_CERTIFICATE_P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_P12_PASSWORD }}
+          IOS_SCHEME: ${{ vars.IOS_SCHEME }}
+          IOS_PROFILE_ID: ${{ vars.IOS_PROFILE_ID }}
+          IOS_CODE_SIGNING_IDENTITY: ${{ vars.CODE_SIGNING_IDENTITY }}
+          EXPORT_METHOD: ${{ vars.EXPORT_METHOD }}
+          APP_STORE_CONNECT_API_KEY: ${{ vars.APP_STORE_CONNECT_API_KEY }}
+  
       ############################################
       #
       # EAS Android application Build
