--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,6 +9,7 @@
     "run:android": "react-native run-android --no-packager --mode developmentDebug --appId=com.azzapp.app_dev",
     "run:ios": "react-native run-ios --no-packager --scheme azzapp-dev",
     "build:ios": "bundle exec fastlane ios build",
+    "deploy:ios": "bundle exec fastlane ios deploy",
     "pod-install": "cd ios && bundle exec pod install",
     "clean": "watchman watch-del-all && rm -Rf node_modules && rm -Rf ios/Pods && rm -Rf ios/build",
     "eas-build-post-install": "(cd ../.. && yarn build-app-dependencies)",
