chore: use bad64 api_store_connect

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -368,7 +368,7 @@ jobs:
           name: ${{ vars.IOS_SCHEME }}.app.dSYM.zip
           path: packages/app/fastlane/builds/${{ vars.IOS_SCHEME }}.app.dSYM.zip 
       
-      - name: Build ios application
+      - name: Upload to TestFlight
         working-directory: packages/app
         run: bundle exec fastlane deploy
         env:
