--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -373,12 +373,12 @@ jobs:
         run: bundle exec fastlane deploy
         env:
           IOS_APP_IDENTIFIER: ${{ vars.IOS_APP_IDENTIFIER }}
-          IOS_CERTIFICATE_P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_P12_PASSWORD }}
           IOS_SCHEME: ${{ vars.IOS_SCHEME }}
           IOS_PROFILE_ID: ${{ vars.IOS_PROFILE_ID }}
           IOS_CODE_SIGNING_IDENTITY: ${{ vars.CODE_SIGNING_IDENTITY }}
-          EXPORT_METHOD: ${{ vars.EXPORT_METHOD }}
-          APP_STORE_CONNECT_API_KEY: ${{ vars.APP_STORE_CONNECT_API_KEY }}
+          IOS_EXPORT_METHOD: ${{ vars.IOS_EXPORT_METHOD }}
+          IOS_CERTIFICATE_P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_P12_PASSWORD }}
+          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
   
       ############################################
       #
