--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -104,7 +104,7 @@
     "react": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-intl": "^6.6.8",
-    "react-native": "^0.74.4",
+    "react-native": "0.74.3",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.9",
     "react-native-bootsplash": "^5.5.3",
