--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -88,6 +88,7 @@
     "expo-clipboard": "~6.0.3",
     "expo-contacts": "~13.0.3",
     "expo-device": "^6.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-font": "^12.0.9",
     "expo-haptics": "~13.0.1",
     "expo-image": "^1.12.13",
