--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -11,7 +11,7 @@ PURCHASE_ANDROID_KEY=goog_vyxAfpVyZNmOdHVuuIQOBmjHevs
 PURCHASE_IOS_KEY=appl_lWmNaDeIzQcECQzHakHNyLaktch
 
 # LINKS FOR LEGAL PAGES
-TERMS_OF_SERVICE=https://www.azzapp.com/legal/terms-of-service
-PRIVACY_POLICY=https://www.azzapp.com/legal/privacy
-ABOUT=https://www.azzapp.com/company/about_us
-FAQ=https://www.azzapp.com/company/faq
+TERMS_OF_SERVICE=https://web.azzapp.com/legal/terms-of-service
+PRIVACY_POLICY=https://web.azzapp.com/legal/privacy
+ABOUT=https://web.azzapp.com/company/about_us
+FAQ=https://web.azzapp.com/company/faq
