--- a/packages/app/android/app/src/main/AndroidManifest.xml
+++ b/packages/app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+  xmlns:tools="http://schemas.android.com/tools">
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
@@ -11,6 +12,9 @@
   <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="com.android.vending.BILLING"/>
+
+  <uses-permission tools:node="remove" android:name="android.permission.ACTIVITY_RECOGNITION" />
+
   <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
   <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
   <uses-feature android:name="android.hardware.camera" android:required="false"/>
