--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -3,6 +3,8 @@ require File.join(File.dirname(`node --print "require.resolve('expo/package.json
 # Resolve react_native_pods.rb with node to allow for hoisting
 # enable Video caching
 $RNVideoUseVideoCaching=true
+# see https://github.com/mrousavy/react-native-vision-camera/blob/v4.5.0/docs/docs/guides/LOCATION.mdx#enable-or-disable-location-apis
+$VCEnableLocation=false
 def node_require(script)
   # Resolve script with node to allow for hoisting
   require Pod::Executable.execute_command('node', ['-p',
