--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/web",
-  "version": "0.5.46",
+  "version": "0.5.47-rc.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
