--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -117,8 +117,8 @@ android {
         applicationId "com.azzapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 5047
-        versionName "0.5.47-rc.0"
+        versionCode 6000
+        versionName "0.6.0-canary.0"
         
         externalNativeBuild {
             cmake {
