--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/app",
-  "version": "0.5.47-rc.0",
+  "version": "0.6.0-canary.0",
   "scripts": {
     "test": "jest",
     "typecheck": "tsc --noEmit",
