--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/schema",
-  "version": "0.5.47-rc.0",
+  "version": "0.6.0-canary.0",
   "private": true,
   "exports": {
     ".": {
