--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -52,6 +52,9 @@ react {
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
     //
+
+    /* Autolinking */
+    autolinkLibrariesWithApp()
 }
 
 /**
@@ -227,5 +230,3 @@ dependencies {
         }
     }
 }
-
-apply from: file("../../../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
