--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -339,7 +339,7 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           working-directory: packages/app
-          bundler-cache: false
+          bundler-cache: true
 
       - name: Cache CocoaPods
         uses: actions/cache@v3
