--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "drizzle-orm@^0.33.0": "patch:drizzle-orm@npm%3A0.33.0#./.yarn/patches/drizzle-orm-npm-0.33.0-74d2936dbe.patch",
     "@shopify/react-native-skia@^1.3.11": "patch:@shopify/react-native-skia@npm%3A1.3.11#./.yarn/patches/@shopify-react-native-skia-npm-1.3.11-cb73825445.patch",
     "react-native-blob-jsi-helper@^0.3.1": "patch:react-native-blob-jsi-helper@npm%3A0.3.1#./.yarn/patches/react-native-blob-jsi-helper-npm-0.3.1-93a155f71e.patch",
-    "react-native-screens@^3.34.0": "patch:react-native-screens@npm%3A3.34.0#./.yarn/patches/react-native-screens-npm-3.34.0-3babbb1374.patch"
+    "react-native-screens@^3.34.0": "patch:react-native-screens@npm%3A3.34.0#./.yarn/patches/react-native-screens-npm-3.34.0-3babbb1374.patch",
+    "react-native-image-size@^1.1.6": "patch:react-native-image-size@npm%3A1.1.6#./.yarn/patches/react-native-image-size-npm-1.1.6-38755aad48.patch"
   },
   "dependencies": {
     "node-gyp": "^10.1.0"
