Revert "chore: disable payment generation for the moment" (#4769)
* Revert "chore: disable payment generation for the moment"

This reverts commit 738886c4e58e59f56ff1b5874f87f52662515acc.

* chore: add logs

* remove useless dependency

* don’t rerun api client build

--- a/packages/payment/turbo.json
+++ b/packages/payment/turbo.json
@@ -5,21 +5,12 @@
   ],
   "tasks": {
     "build": {
-      "dependsOn": [
-        "payment-api-client",
-        "^build"
-      ],
-      "outputs": [
-        "lib/**"
-      ],
-      "inputs": [
-        "src/**"
-      ]
+      "dependsOn": ["payment-api-client", "^build"],
+      "outputs": ["lib/**"],
+      "inputs": ["src/**"]
     },
     "payment-api-client": {
-      "passThroughEnv": [
-        "PAYMENT_API_URL"
-      ],
+      "passThroughEnv": ["PAYMENT_API_URL"],
       "dependsOn": [],
       "inputs": [],
       "cache": false
