--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,7 +32,6 @@
     "@graphql-yoga/plugin-disable-introspection": "^2.3.1",
     "@graphql-yoga/plugin-persisted-operations": "^3.3.1",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@sendgrid/mail": "^8.1.3",
     "@sentry/nextjs": "^7.113.0",
     "@sentry/tracing": "^7.114.0",
     "@types/react-lottie": "^1.2.10",
@@ -65,8 +64,7 @@
     "semver": "^7.6.2",
     "server-only": "^0.0.1",
     "sharp": "^0.33.4",
-    "stream-browserify": "^3.0.0",
-    "twilio": "^5.1.0"
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
