--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -26,7 +26,7 @@
     "@types/lodash": "4.17.1",
     "@types/node-fetch": "2.6.11",
     "better-sqlite3": "^9.6.0",
-    "drizzle-kit": "0.22.7",
+    "drizzle-kit": "^0.24.2",
     "mysql2": "^3.9.7",
     "node-fetch": "2",
     "typescript": "^5.5.3"
