--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -86,7 +86,7 @@
     "expo-asset": "^10.0.10",
     "expo-blur": "^13.0.2",
     "expo-clipboard": "~6.0.3",
-    "expo-contacts": "~13.0.3",
+    "expo-contacts": "^13.0.5",
     "expo-device": "^6.0.2",
     "expo-file-system": "^17.0.1",
     "expo-font": "^12.0.9",
